# Tree-AVLTree-Heap

./: AVL.cpp  BST.cpp  CMakeLists.txt  README.md  heapFunctions.cpp  main.cpp  menues.cpp  readFromFile.cpp  studentClass.cpp  tempCodeRunnerFile.cpp
