cmake_minimum_required(VERSION 3.23)
project(Assinment3DS)

set(CMAKE_CXX_STANDARD 14)
add_executable(heapFunctions.cpp heapFunctions.cpp)
add_executable(main.cpp main.cpp)
add_executable(menues.cpp menues.cpp)
add_executable(readFromFile.cpp readFromFile.cpp)
add_executable(studentClass.cpp studentClass.cpp)